welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: type mismatch;
 found   : Unit
 required: Boolean
  while (fonctionTest()) {
                     ^SnakeBuggle:22: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
          return true
                 ^SnakeBuggle:22: warning: enclosing method fonctionTest has result type Unit: return value discarded
          return true
          ^SnakeBuggle:24: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return false
               ^SnakeBuggle:24: warning: enclosing method fonctionTest has result type Unit: return value discarded
        return false
        ^SnakeBuggle:29: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
          return true
                 ^SnakeBuggle:29: warning: enclosing method fonctionTest has result type Unit: return value discarded
          return true
          ^SnakeBuggle:31: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return false
               ^SnakeBuggle:31: warning: enclosing method fonctionTest has result type Unit: return value discarded
        return false
        ^SnakeBuggle:33: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^SnakeBuggle:33: warning: enclosing method fonctionTest has result type Unit: return value discarded
      return false
      ^SnakeBuggle:35: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^SnakeBuggle:35: warning: enclosing method fonctionTest has result type Unit: return value discarded
    return false
    ^